--- a/views/settings.haml
+++ b/views/settings.haml
@@ -19,7 +19,7 @@
     :javascript
       $(function () { cmfbsub.settings.ready(#{@js_data}); });
     /[if lt IE 9]
-      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
   %body
     %header.clear
       %h1 Campaign Monitor
