--- a/public/scss/fb.scss
+++ b/public/scss/fb.scss
@@ -122,6 +122,25 @@ fieldset {
   h2 {
     margin-bottom: 5px; } }
 
+.subscribe-error {
+  background-color: #FBE5B9;
+  color: #A48B5E;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
+  padding: 12px 14px 16px;
+  width: 60%;
+  top: 20%;
+  left: 50%;
+  margin-left: -35%;
+  position: absolute;
+  z-index: 20;
+  border: 1px solid #A48B5E;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 3px 4px rgba(0, 0, 0, 0.1);
+  line-height: 1.3;
+  display: none;
+  h2 {
+    margin-bottom: 5px; } }
+
+
 .grey {
   background-color: #F2F2F2;
   border-bottom: none;
