Fixed bug when subscribing with multiple values for a custom field. Closes #5.

--- a/views/_custom_field.haml
+++ b/views/_custom_field.haml
@@ -11,6 +11,6 @@
   %label.adjacent-checkboxes&=name
   %fieldset
     - options.split(',').each do |o|
-      %input{:name => "#{att_friendly_key(key)}", :value => o, :type => :checkbox}/
+      %input{:name => "#{att_friendly_key(key)}[]", :value => o, :type => :checkbox}/
       %label.checkbox-adjacent{:for => "#{att_friendly_key(key)}"}&=o
       %br/
