--- a/public/scss/fb.scss
+++ b/public/scss/fb.scss
@@ -56,7 +56,7 @@ button {
   border-color: #D9DFEA #0E1F5B #0E1F5B #D9DFEA;
   background-color: #3B5998;
   color: white;
-  padding: 2px 15px 3px 15px;
+  padding: 2px 10px;
   text-align: center;
   font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
   margin-left: 22.5%;
@@ -70,8 +70,7 @@ button {
   &:active {
     background: #3c5293; } }
 
-.error {
-  display: none;
+div.error {
   background-color: #fbe5b9;
   color: #a48b5e;
   padding: 7px 9px;
@@ -127,19 +126,16 @@ fieldset {
   color: #A48B5E;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
   padding: 12px 14px 16px;
-  width: 60%;
   top: 20%;
   left: 50%;
-  margin-left: -35%;
-  position: absolute;
-  z-index: 20;
+  margin-top: 16px;
+  margin-left: 22.5%;
   border: 1px solid #A48B5E;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 3px 4px rgba(0, 0, 0, 0.1);
   line-height: 1.3;
   display: none;
   h2 {
     margin-bottom: 5px; } }
-
 
 .grey {
   background-color: #F2F2F2;
