--- a/views/settings.haml
+++ b/views/settings.haml
@@ -50,7 +50,7 @@
             %div
               .page
                 %figure
-                  %img/
+                  %img{:src => p.image_url}/
                 %h2="#{p.name}"
                 %p="#{p.category}"
               .prefs
