Fixed authorisation flow. Request offline_access permission in scope param to ensure that auth tokens don't expire. Fixes #4. Also deal with number fields in subscribe form, including client side number validation.

--- a/views/_custom_field.haml
+++ b/views/_custom_field.haml
@@ -1,6 +1,6 @@
-- if ["Text", "Date"].include? type
+- if ["Text", "Number", "Date"].include? type
   %label&=name
-  %input{:name => att_friendly_key(key), :id => att_friendly_key(key), :type => :text}
+  %input{:name => att_friendly_key(key), :id => att_friendly_key(key), :type => :text, :class => "number"}
 - elsif type == "MultiSelectOne"
   %label&=name
   %fieldset
