Remove traces of Campaign Monitor specifics. Still need to swap image based on canvas name. Part of #10.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,9 +1,9 @@
 !!!
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xmlns:fb" => "http://www.facebook.com/2008/fbml"}
   %head
-    %title="Campaign Monitor Subscribe Forms"
+    %title
     %link{:href => versioned_stylesheet('cm'), :media => 'all', :rel => 'stylesheet', :type => 'text/css'}
-    %meta{:name => "description", :content => "Easily add Campaign Monitor subscribe forms to your Facebook pages"}
+    %meta{:name => "description", :content => "Easily add subscribe forms to your Facebook pages"}
     
   %body
     #container
