--- a/public/scss/cm.scss
+++ b/public/scss/cm.scss
@@ -1,4 +1,4 @@
-@import url(/reset.css);
+@import url('/reset.css');
 
 body {
   font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
@@ -167,7 +167,7 @@ div.selector {
     position: absolute;
     width: 20px;
     height: 100%;
-    background: url(../img/dropdown_arrow.png) no-repeat center center;
+    background: url('/img/dropdown_arrow.png') no-repeat center center;
     cursor: pointer; }
   span {
     display: block;
@@ -196,14 +196,14 @@ header {
     height: 28px;
     width: 211px;
     text-indent: -9999px;
-    background: url(../img/cm.png) no-repeat;
+    background: url('/img/cm.png') no-repeat;
     margin: 15px 0;
     float: left;
     &.cs {
       height: 28px;
       width: 211px;
       text-indent: -9999px;
-      background: url(../img/cm-cs.png) no-repeat;
+      background: url('/img/cm-cs.png') no-repeat;
       margin: 15px 0;
       float: left; } }
   button, > button:hover {
@@ -332,7 +332,7 @@ section#body {}
     margin-top: -35px;
     margin-right: 25px;
     font-weight: bold;
-    background: url(../img/back.png) no-repeat left center;
+    background: url('/img/back.png') no-repeat left center;
     padding-left: 19px;
     -webkit-font-smoothing: antialiased;
     a {
@@ -343,7 +343,7 @@ section#body {}
   .page {
     border: solid 1px #e4e4e4;
     height: 55px;
-    background: #f0f0f0 url(../img/gloss.png) repeat-x;
+    background: #f0f0f0 url('/img/gloss.png') repeat-x;
     box-shadow: inset 0 1px 2px #ffffff;
     -webkit-box-shadow: inset 0 1px 2px rgba(255, 255, 255, 1), inset 0 -1px 2px rgba(255, 255, 255, 0.5);
     -moz-box-shadow: inset 0 1px 2px rgba(255, 255, 255, 1), inset 0 -1px 2px rgba(255, 255, 255, 0.5);
