Link to Facebook's 'Create a Page' page.

--- a/views/settings.haml
+++ b/views/settings.haml
@@ -71,7 +71,7 @@
                 .pref.save
                   %button.primary Save Changes
         - else
-          %h1="Sorry, you need to be an admin of a Facebook page before you can add a subscribe form to the page."
+          %h1 Sorry, you need to have a <a href="http://www.facebook.com/pages/create.php" target="_blank">Facebook page</a> before you can add a subscribe form to the page.
       - else
         %p
           <fb:login-button show-faces="true"></fb:login-button>
