Added image created by Pete for cases where Facebook user does not own any pages.

--- a/public/scss/cm.scss
+++ b/public/scss/cm.scss
@@ -569,3 +569,9 @@ section#body {}
       display: inline-block;
       width: 48%;
       margin-bottom: -10px; } } }
+
+a#page-create {
+  margin: 120px 0;
+  display: block;
+  height: 136px;
+  background: url('/img/page_create.png') no-repeat center 0; }
