Tiny css hacks from the Dodds.

--- a/public/scss/fb.scss
+++ b/public/scss/fb.scss
@@ -30,7 +30,8 @@ label {
     text-align: left;
     font-weight: normal;
     margin-left: 10px;
-    top: 0; }
+    top: 0;
+    width: auto; }
   &.adjacent-checkboxes {
     vertical-align: top;
     top: 0; } }
