Adding additional confirmation page after saving subscribe form.

--- a/public/scss/cm.scss
+++ b/public/scss/cm.scss
@@ -575,3 +575,9 @@ a#page-create {
   display: block;
   height: 136px;
   background: url('/img/page_create.png') no-repeat center 0; }
+
+a#settings-saved {
+  margin: 25px 0;
+  display: block;
+  height: 582px;
+  background: url('/img/settings_saved.png') no-repeat center 0; }
