--- a/views/settings.haml
+++ b/views/settings.haml
@@ -69,7 +69,7 @@
                   %label The form will ask for:
                   %fieldset{:id => "fields-#{p.id}"}
                 .pref.save
-                  %button.primary Save Changes
+                  %button.primary Save Form
         - else
           %h1 Before we begin, you'll need to create a <a href="http://www.facebook.com/pages/create.php" target="_blank">Facebook Page</a>
           %a{:id => "page-create", :href => "http://www.facebook.com/pages/create.php", :target => "_blank"}
