Facebook *just* changed the app container to be full width. We're using fluid canvas width for the settings part of the app now.

--- a/public/scss/cm.scss
+++ b/public/scss/cm.scss
@@ -326,7 +326,9 @@ section#body {}
     margin-left: 25px;
     margin-bottom: 20px;
     font-size: 14px;
-    font-weight: bold; }
+    font-weight: bold;
+    &.center {
+      text-align: center; } }
   .back {
     float: right;
     margin-top: -35px;
