--- a/views/settings.haml
+++ b/views/settings.haml
@@ -71,7 +71,7 @@
                 .pref.save
                   %button.primary Save Form
         - else
-          %h1 Before we begin, you'll need to create a <a href="http://www.facebook.com/pages/create.php" target="_blank">Facebook Page</a>
+          %h1{:class => "center"} Before we begin, you'll need to create a <a href="http://www.facebook.com/pages/create.php" target="_blank">Facebook Page</a>
           %a{:id => "page-create", :href => "http://www.facebook.com/pages/create.php", :target => "_blank"}
           
       - else
