--- a/views/settings_saved.haml
+++ b/views/settings_saved.haml
@@ -21,5 +21,5 @@
       });
   %body
     %section#body
-      %h1 Congratulations, your subscribe form has been created
+      %h1{:class => "center"} Congratulations, your subscribe form has been created
       %a{:id => "settings-saved", :href => "#"}
