Select elements in prefs should use display: inline-block.

--- a/public/scss/cm.scss
+++ b/public/scss/cm.scss
@@ -501,7 +501,7 @@ section#body {}
       padding-right: 15px;
       position: relative; }
     select {
-      display: block; }
+      display: inline-block; }
     .selector {
       color: #434343;
       margin-bottom: 10px; }
