Changed custom field delimiter from , to ^. Fixes #17.

--- a/views/_custom_field.haml
+++ b/views/_custom_field.haml
@@ -8,12 +8,12 @@
   %label&=name
   %fieldset
     %select{:name => att_friendly_key(key), :id => att_friendly_key(key)}
-      - options.split(',').each do |o|
+      - options.split("^").each do |o|
         %option{:value => o}&=o
 - elsif type == "MultiSelectMany"
   %label.adjacent-checkboxes&=name
   %fieldset
-    - options.split(',').each do |o|
+    - options.split("^").each do |o|
       %input{:name => "#{att_friendly_key(key)}[]", :value => o, :type => :checkbox}/
       %label.checkbox-adjacent{:for => "#{att_friendly_key(key)}"}&=o
       %br/
