--- a/views/not_found.haml
+++ b/views/not_found.haml
@@ -1,2 +1,3 @@
-%h2
-  Sorry, couldn't find that!
+%h2.title
+  Sorry, couldn't find that.
+%p="We don't recognise that as part of #{app_name} - sorry!"
