--- a/views/error.haml
+++ b/views/error.haml
@@ -1,2 +1,3 @@
-%h2
-  Sorry, something is broken. Should be fixed soon!
+%h2.title
+  Sorry, something's broken.
+%p="We're really sorry that there's something wrong with #{app_name}. We'll get it fixed as soon as we possibly can."
