Slighly more specific privacy policy.

--- a/views/privacy.haml
+++ b/views/privacy.haml
@@ -1,7 +1,8 @@
-%h2.title
-  Privacy Policy
+%h2.title="#{app_name} Privacy Policy"
 %p="The #{app_name} app respect's the privacy of people who use it. This Privacy Policy outlines what specific information we store, and how that information is used."
 
-%p="The #{app_name} app asks when it needs information that personally identifies you. This information is collected purely to allow you to manage subscribe forms from your Facebook account. We never store any passwords you enter when using the #{app_name} app."
+%p="The #{app_name} app asks when it needs information that personally identifies you. This information includes your Facebook user ID, as well as a unique token for your #{app_name} account."
+
+%p="Any information we collect from you is only used to allow you to manage subscribe forms from your Facebook account. We never store your password when using the #{app_name} app."
 
 %p="The #{app_name} app ensures that all information you enter which personally identifies you remains private and confidential."
