Updated image indicating Subscribe Form launch position in header of Facebook page. Fixes #20.

--- a/public/scss/cm.scss
+++ b/public/scss/cm.scss
@@ -578,4 +578,4 @@ a#settings-saved {
   margin: 25px 0;
   display: block;
   height: 582px;
-  background: url('/img/settings_saved.png') no-repeat center 0; }
+  background: url('/img/settings_saved.png?v=20121115') no-repeat center 0; }
